# rustconf

./: .gitignore  Cargo.toml  README.md  test_notify.py  tutorial.md
.github/workflows/: ci.yml
ci/: check.sh
crates/coreconf-cli/: Cargo.toml
crates/coreconf-cli/src/: cli.rs  complete.rs  lib.rs  main.rs  session.rs
crates/coreconf-cli/src/cmd/: compile.rs  inspect.rs  mod.rs  serve.rs
crates/coreconf-cli/src/commands/: convert.rs  live.rs  mod.rs  serve.rs  shell.rs  validate.rs
crates/coreconf-cli/tests/: cli_compile.rs  cli_inspect_runtime.rs  cli_phase2_compile.rs  cli_phase2c_compile.rs  cli_serve.rs
crates/coreconf-compiler/: Cargo.toml
crates/coreconf-compiler/src/: ast.rs  lexer.rs  lib.rs  parser.rs  repository.rs  source.rs  validate.rs  xpath.rs  yin.rs
crates/coreconf-compiler/src/emit/: bundle.rs  mod.rs  sid.rs  tree.rs  yang.rs  yin.rs
crates/coreconf-compiler/tests/: augment_deviation.rs  emit_bundle.rs  must_when.rs  parser_basic.rs  repository_phase2.rs  repository_validate.rs  type_resolution.rs  uses_refine.rs  yin_parse.rs
crates/coreconf-compiler/tests/fixtures/: basic-module.yang  imported-types.yang  phase2-device-sub.yang  phase2-device.yang  phase2-overrides.yang  phase2-types.yang  phase2c-common.yang  phase2c-invalid-constraints.yang  phase2c-service.yang  phase2c-service.yin  uses-rpc.yang
crates/coreconf-data/: Cargo.toml
crates/coreconf-data/examples/: coap_client.rs  coap_server.rs  explained.rs
crates/coreconf-data/src/: coap_types.rs  coreconf.rs  datastore.rs  lib.rs  path.rs  request_builder.rs  schema_adapter.rs  sid.rs  types.rs
crates/coreconf-data/tests/: bundle_model_roundtrip.rs  integration.rs  path_api.rs  request_auth.rs
crates/coreconf-model/: Cargo.toml
crates/coreconf-model/src/: codec.rs  composite_model.rs  error.rs  instance_id.rs  lib.rs  sid_file.rs  types.rs
crates/coreconf-model/tests/: composite_model.rs
crates/coreconf-runtime/: Cargo.toml
crates/coreconf-runtime/src/: backend.rs  coap_types.rs  datastore.rs  file_backend.rs  lib.rs  memory_backend.rs  operations.rs  path.rs  request_builder.rs  request_handler.rs  transaction.rs  transport.rs
crates/coreconf-runtime/src/transport/: coap_lite.rs
crates/coreconf-runtime/tests/: m2m_datastore.rs  m2m_protocol.rs  predicate_paths.rs  projected_fetch.rs  request_handler.rs
crates/coreconf-schema/: Cargo.toml
crates/coreconf-schema/src/: bundle.rs  lib.rs  node.rs  operations.rs  references.rs  types.rs
crates/coreconf-schema/tests/: bundle_roundtrip.rs  resolution_metadata.rs
crates/coreconf-server/: Cargo.toml
crates/coreconf-server/src/: audit.rs  auth.rs  lib.rs  operations.rs  server.rs  sqlite_store.rs  store.rs
crates/coreconf-server/tests/: auth.rs  e2e_compiler_to_server.rs  operations.rs  persistence.rs  request_handler.rs
examples/: coap_client.rs  coap_server.rs  explained.rs
samples/: example-data.json  example.sid
src/: coap_types.rs  coreconf.rs  datastore.rs  error.rs  handler.rs  instance_id.rs  lib.rs  request_builder.rs  sid.rs  types.rs
tests/: integration.rs
tutorial/: data.json  server_config.json
