[package]
name = "rust-coreconf"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of CORECONF (CoAP Management Interface)"
license = "GPL-3.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"
base64 = "0.22"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"
hex = "0.4"
coap-lite = "0.13"
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.4"


