[workspace]
members = [
    ".",
    "crates/coreconf-model",
    "crates/coreconf-runtime",
    "crates/coreconf-cli",
]
resolver = "2"

[package]
name = "rust-coreconf"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Sam"]
description = "Rust implementation of CORECONF (CoAP Management Interface)"
license = "GPL-3.0"
readme = "README.md"

[dependencies]
coreconf-model = { path = "crates/coreconf-model" }
coreconf-runtime = { path = "crates/coreconf-runtime" }

[dev-dependencies]
hex = "0.4"
tempfile = "3.14"
coap-lite = "0.13"
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.4"
serde_json = "1.0"


