[package]
name = "coreconf-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Sam"]
description = "CORECONF command-line interface"
license = "GPL-3.0"

[[bin]]
name = "coreconf-cli"
path = "src/main.rs"

[lib]
name = "coreconf_cli"
path = "src/lib.rs"

[dependencies]
coreconf-model = { path = "../coreconf-model" }
coreconf-runtime = { path = "../coreconf-runtime" }
clap = { version = "4.0", features = ["derive"] }
coap-lite = "0.13"
ctrlc = "3.4"
rustyline = "15"
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
