[package]
name = "coreconf-compiler"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
coreconf-schema = { path = "../coreconf-schema" }
quick-xml = "0.37"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
