[package]
name = "rust-coreconf"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Bundle-backed CORECONF data and codec layer"
readme = "../../README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"
base64 = "0.22"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"
hex = "0.4"
coap-lite = "0.13"
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.4"
