[package]
name = "coreconf-model"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Sam"]
description = "CORECONF model types and SID file handling"
license = "GPL-3.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"
thiserror = "2.0"
base64 = "0.22"

[dev-dependencies]
hex = "0.4"
tempfile = "3.14"
