[package]
name = "coreconf-runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Sam"]
description = "CORECONF runtime and request handling"
license = "GPL-3.0"

[dependencies]
coreconf-model = { path = "../coreconf-model" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
