[package]
name = "coreconf-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rust-coreconf = { path = "../coreconf-data" }
coreconf-schema = { path = "../coreconf-schema" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
coreconf-compiler = { path = "../coreconf-compiler" }
tempfile = "3.14"
